--- a/public/chord.html
+++ b/public/chord.html
@@ -206,19 +206,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9f78ca1">Chord</a></li>
+<li><a href="#org21c3578">Chord</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9f78ca1" class="outline-2">
-<h2 id="org9f78ca1">Chord</h2>
-<div class="outline-text-2" id="text-org9f78ca1">
+<div id="outline-container-org21c3578" class="outline-2">
+<h2 id="org21c3578">Chord</h2>
+<div class="outline-text-2" id="text-org21c3578">
 <p>
 In 2016, when I was learning Python, I designed this UI for a MIDI generating tool using <a href="https://py.processing.org/">processing mode for python</a>. The code is rather hacky but the diagram is interesting so I share it here. It is based on the circle of 5ths but illustrates some other interesting symmetries and patterns.
 </p>
 
 
-<div id="orge71ec8a" class="figure">
+<div id="org58a09d4" class="figure">
 <p><img src="images/chord.png" alt="chord.png" />
 </p>
 </div>
