--- a/public/fish.html
+++ b/public/fish.html
@@ -205,13 +205,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0543534">The Sea</a></li>
+<li><a href="#orgadffa8f">The Sea</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org0543534" class="outline-2">
-<h2 id="org0543534">The Sea</h2>
-<div class="outline-text-2" id="text-org0543534">
+<div id="outline-container-orgadffa8f" class="outline-2">
+<h2 id="orgadffa8f">The Sea</h2>
+<div class="outline-text-2" id="text-orgadffa8f">
 <p class="verse">
 Strange what sort of fish are we?<br />
 Stood and stolen by unfolded light.<br />
