--- a/public/milkweed.html
+++ b/public/milkweed.html
@@ -206,20 +206,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgdb72648">Milkweed</a></li>
-<li><a href="#org379b581">Cardiac Glycosides</a></li>
-<li><a href="#orgd9dadd0">The Monarch Butterfly</a></li>
-<li><a href="#orgd9c5501">The Viceroy Butterfly</a></li>
-<li><a href="#org6eea737">Batesian Mimicry</a></li>
-<li><a href="#org7c67a19">Müllerian Mimicry</a></li>
+<li><a href="#orgbfd60b3">Milkweed</a></li>
+<li><a href="#org0256ace">Cardiac Glycosides</a></li>
+<li><a href="#orge473461">The Monarch Butterfly</a></li>
+<li><a href="#orgccf067f">The Viceroy Butterfly</a></li>
+<li><a href="#org1e631cd">Batesian Mimicry</a></li>
+<li><a href="#orga9ac406">Müllerian Mimicry</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdb72648" class="outline-2">
-<h2 id="orgdb72648">Milkweed</h2>
-<div class="outline-text-2" id="text-orgdb72648">
+<div id="outline-container-orgbfd60b3" class="outline-2">
+<h2 id="orgbfd60b3">Milkweed</h2>
+<div class="outline-text-2" id="text-orgbfd60b3">
 
-<div id="org7937e63" class="figure">
+<div id="org0ab4060" class="figure">
 <p><img src="images/milkweed.jpg" alt="milkweed.jpg" />
 </p>
 </div>
@@ -229,21 +229,21 @@ Milkweed is a perennial plant abundant in Africa and the Americas. The genus is 
 </p>
 
 
-<div id="orga3aac52" class="figure">
+<div id="org7472d6b" class="figure">
 <p><img src="images/Star_of_life2.svg.png" alt="Star_of_life2.svg.png" />
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org379b581" class="outline-2">
-<h2 id="org379b581">Cardiac Glycosides</h2>
-<div class="outline-text-2" id="text-org379b581">
+<div id="outline-container-org0256ace" class="outline-2">
+<h2 id="org0256ace">Cardiac Glycosides</h2>
+<div class="outline-text-2" id="text-org0256ace">
 <p>
 Milkweeds produce a latex containing cardiac glycosides, a bitter-tasting toxin, as protection against herbivores. These compounds are more concentrated in the parts of the plants that animals would eat (leaves, stems, seeds).
 </p>
 
 
-<div id="org60d9cb6" class="figure">
+<div id="org6488bc0" class="figure">
 <p><img src="images/Cardiac_glycoside.png" alt="Cardiac_glycoside.png" />
 </p>
 </div>
@@ -257,11 +257,11 @@ Preexisting steroid synthesis pathways that serve other functions like hormone p
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9dadd0" class="outline-2">
-<h2 id="orgd9dadd0">The Monarch Butterfly</h2>
-<div class="outline-text-2" id="text-orgd9dadd0">
+<div id="outline-container-orge473461" class="outline-2">
+<h2 id="orge473461">The Monarch Butterfly</h2>
+<div class="outline-text-2" id="text-orge473461">
 
-<div id="org2607d08" class="figure">
+<div id="org8702e41" class="figure">
 <p><img src="images/Monarch.jpg" alt="Monarch.jpg" />
 </p>
 </div>
@@ -275,11 +275,11 @@ The distinctively coloured monarch butterfly, named after King William III aka W
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9c5501" class="outline-2">
-<h2 id="orgd9c5501">The Viceroy Butterfly</h2>
-<div class="outline-text-2" id="text-orgd9c5501">
+<div id="outline-container-orgccf067f" class="outline-2">
+<h2 id="orgccf067f">The Viceroy Butterfly</h2>
+<div class="outline-text-2" id="text-orgccf067f">
 
-<div id="orgfca4bab" class="figure">
+<div id="org2c95ef2" class="figure">
 <p><img src="images/viceroy.jpg" alt="viceroy.jpg" />
 </p>
 </div>
@@ -289,11 +289,11 @@ The viceroy looks somewhat similar to the monarch but it does not have the adapt
 </p>
 </div>
 </div>
-<div id="outline-container-org6eea737" class="outline-2">
-<h2 id="org6eea737">Batesian Mimicry</h2>
-<div class="outline-text-2" id="text-org6eea737">
+<div id="outline-container-org1e631cd" class="outline-2">
+<h2 id="org1e631cd">Batesian Mimicry</h2>
+<div class="outline-text-2" id="text-org1e631cd">
 
-<div id="org2188166" class="figure">
+<div id="orgcdf54fb" class="figure">
 <p><img src="images/bates.jpg" alt="bates.jpg" />
 </p>
 </div>
@@ -303,17 +303,17 @@ In 1848 two English amateur entomologists, Henry Walter Bates and Alfred Russel 
 </p>
 </div>
 </div>
-<div id="outline-container-org7c67a19" class="outline-2">
-<h2 id="org7c67a19">Müllerian Mimicry</h2>
-<div class="outline-text-2" id="text-org7c67a19">
+<div id="outline-container-orga9ac406" class="outline-2">
+<h2 id="orga9ac406">Müllerian Mimicry</h2>
+<div class="outline-text-2" id="text-orga9ac406">
 
-<div id="orge3568d6" class="figure">
+<div id="org18e4a1e" class="figure">
 <p><img src="images/Franzmuller.jpg" alt="Franzmuller.jpg" />
 </p>
 </div>
 
 <p>
-As mentioned above, the viceroy butterfly cannot eat milkweed. However it does eat willow and other plants that contain salicylic acid and other bitter, bad tasting compounds. While not as toxic, this is also a deterrent to herbivores. Since it has its own deterrent, the viceroy is not a strict example of Batesian mimic.
+As mentioned above, the viceroy butterfly cannot eat milkweed. However it does eat willow and other plants that contain salicylic acid and other bitter, bad tasting compounds. While not as toxic, this is also a deterrent to predators. Since it has its own deterrent, the viceroy is not a strict example of Batesian mimic.
 </p>
 
 <p>
