--- a/public/index.html
+++ b/public/index.html
@@ -395,7 +395,7 @@ hi im luke this is my blog and stuff i made
 </table>
 
 
-<div id="org567c11a" class="figure">
+<div id="orgea31617" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
