--- a/public/into_this_wired_abyss.html
+++ b/public/into_this_wired_abyss.html
@@ -206,13 +206,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org31190a0">Into This Wired Abyss</a></li>
+<li><a href="#orge7b12b0">Into This Wired Abyss</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org31190a0" class="outline-2">
-<h2 id="org31190a0">Into This Wired Abyss</h2>
-<div class="outline-text-2" id="text-org31190a0">
+<div id="outline-container-orge7b12b0" class="outline-2">
+<h2 id="orge7b12b0">Into This Wired Abyss</h2>
+<div class="outline-text-2" id="text-orge7b12b0">
 <p>
 A series of compilations that I curated, showcasing various friends, collaborators and talented noise makers from the alternative electronic music world from 2012 to 2015
 </p>
